Return invite object on invite accept
